--- a/src/agentcore/templates/presenters/documents/basic_metadata.jinja
+++ b/src/agentcore/templates/presenters/documents/basic_metadata.jinja
@@ -1,6 +1,6 @@
 {%- import 'macros.jinja' as utils %}
 {%- for document in documents %}
-<{{ doc_tag }} {{ utils.show_field('name', document.metadata, "name", 'Unknown') }} {{ utils.show_field('url', document.metadata, 'url', 'no-url', index=0) }}>
+<{{ doc_tag }} {{ utils.show_field('name', document.metadata, "name", 'Unknown') }} {{ utils.show_field('source', document.metadata, 'source', 'Unknown', index=0) }}>
 {{ document.text }}
 </{{ doc_tag }}>
 {%- endfor %}
